syntax = "proto3";

import "google/protobuf/empty.proto";

package proto;
option go_package = '../proto';
option cc_generic_services = true;

service DataNode {
  rpc Put (AddRequest) returns (google.protobuf.Empty) {}
  rpc Get (GetRequest) returns (GetResponse) {}
  rpc GetMeta (GetMetaRequest) returns (GetMetaResponse) {}
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty) {}
  rpc Size (SizeRequest) returns (SizeResponse) {}
  rpc DeleteMany (DeleteManyRequest) returns (google.protobuf.Empty) {}
  rpc AllKeysChan (google.protobuf.Empty) returns (stream AllKeysChanResponse) {}
}

message AddRequest {
  string key = 1;
  bytes meta = 2;
  bytes data = 3;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes meta = 1;
  bytes data = 2;
}

message GetMetaRequest {
  string key = 1;
}

message GetMetaResponse {
  bytes meta = 1;
}

message DeleteRequest {
  string key = 1;
}

message SizeRequest {
  string key = 1;
}

message SizeResponse {
  int64 size = 1;
}

message DeleteManyRequest {
  repeated string keys = 1;
}

message AllKeysChanResponse {
  string key = 1;
}